New version 0.1.6. Read more https://github.com/xdan/jodit/releases/tag/0.1.6

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jodit/3.1.36/jodit.min.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jodit/3.1.36/jodit.min.js"></script>
   </head>
   <body>
     <noscript>
