New version 0.1.10. Read more https://github.com/xdan/jodit/releases/tag/0.1.10

--- a/public/index.html
+++ b/public/index.html
@@ -20,14 +20,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jodit/3.1.36/jodit.min.css">
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jodit/3.1.36/jodit.min.js"></script>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jodit/3.1.39/jodit.min.css">
   </head>
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="root"></div>
+    <div style="width: 1200px; margin: 0 auto;" id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
