New version 0.1.15. Read more https://github.com/xdan/jodit/releases/tag/0.1.15

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,14 @@
     -->
     <title>React App</title>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jodit/3.1.39/jodit.min.css">
+    <script>
+        window.JoditPlayConfig = {
+            showCode: true,
+            showEditor: true,
+            showButtonsTab: true,
+            setCode: false,
+        };
+    </script>
   </head>
   <body>
     <noscript>
