New version 0.1.17. Read more https://github.com/xdan/jodit/releases/tag/0.1.17

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,11 @@
             showCode: true,
             showEditor: true,
             showButtonsTab: true,
-            setCode: false,
+            setCode: console.log,
+            setConfig: console.log,
+            initialConfig: {
+                autofocus: true
+            },
         };
     </script>
   </head>
