New version 0.1.24. Read more https://github.com/xdan/jodit/releases/tag/0.1.24

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
             setCode: console.log,
             setConfig: console.log,
             initialConfig: {
-                autofocus: true
+                // autofocus: true
             },
         };
     </script>
