New version 0.1.37. Read more https://github.com/xdan/jodit/releases/tag/0.1.37

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
             showEditor: true,
             showButtonsTab: true,
             setCode: console.log,
+            setCSS: console.log,
             setConfig: console.log,
             initialConfig: {
                 // autofocus: true
