New version 0.1.38. Read more https://github.com/jodit/jodit-docs/releases/tag/0.1.38

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,10 @@
             setCode: console.log,
             setCSS: console.log,
             setConfig: console.log,
+            initialCSS: '.jodit_container .jodit_toolbar,\n' +
+            '.jodit_container .jodit_statusbar {\n' +
+            'background-color: #7862e0;\n' +
+            '}\n',
             initialConfig: {
                 // autofocus: true
             },
