--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
             setCode: console.log,
             setCSS: console.log,
             setConfig: console.log,
+            dataURL: "%PUBLIC_URL%",
             initialCSS: '.jodit_container .jodit_toolbar,\n' +
             '.jodit_container .jodit_statusbar {\n' +
             'background-color: #7862e0;\n' +
