--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-    <link rel="stylesheet" href="%PUBLIC_URL%/node_modules/jodit/build/jodit.min.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/node_modules/jodit/build/jodit.es2018.min.css">
     <script>
         window.JoditPlayConfig = {
             showCode: true,
